Start adding api endpoints, apply sanctum middleware, Other minor fixes

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "modullo/modules-lms-base-accounts",
-  "description": "description",
+  "description": "Learners management package.",
   "license": "GPL-3.0-or-later",
   "authors": [
     {
